# adventOfCode

./: .gitignore
2021/day0/: day1.py
2023/day1/: Cargo.toml  part1.rs  part2.rs
day0/: day1.py  main  main.rs
day1/: day2.py
day2/: day3.py
