[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"

[[bin]]
name = "part1"
path = "part1.rs"

[[bin]]
name = "part2"
path = "part2.rs"

[[bin]]
name = "day1"
path = "main.rs"
